tests/paczka1/fuzzy1/47855897.err
Error in line 8: 3Gp A598 1,0
Error in line 10: 3Gp A960 77,3
Error in line 14: DejzvI A30 21,4
Error in line 6: 18dPtHOn A30 58,0
Error in line 20: kYGtJJsSZ A960 13,8
Error in line 28: kYGtJJsSZ A960 65,3
Error in line 26: DejzvI S354 27,1
Error in line 3: XKurDYfV7iI A30 86,3
